# docs

./: .eslintrc  .eslintrc.js  .gitignore  .gitmodules  .project  .snyk  .spelling  .travis.yml  CNAME  Dockerfile  Gruntfile.coffee  README.md  TODO  app.js  build.js  device_features.json  index.html  main.js  npm-shrinkwrap.json  package-lock.json  package.json  redirects.json  spark.js
.circleci/: config.yml
.cspell/: custom-dictionary-workspace.txt
assets/: flatdoc-mod.js  main.js  spark.js  style.css  theme-white.js
assets/css/: theme-white.css
config/: .gitignore  blurbs.json  card_mapping.json  crawler.json  device_features.json  dnsTable.json  planLimits.json  redirects.json  sharedBlurbs.json  sitemap.json  supportPortalRedirects.js  troubleshootingPages.csv
config/diagrams/: m-hat.json  top-diagram.json
content/: api_examples.md  examples.md  shields.md  start.md
dest/: api.html  api_examples.html  connect.html  examples.html  firmware.html  hardware.html  index.html  shields.html  start.html
dest/api/: index.html
dest/connect/: index.html
dest/examples/: index.html
dest/firmware/: index.html
dest/hardware/: index.html
dest/shields/: index.html
dest/start/: index.html
docs/: api.md  api_examples.md  beginners.md  cli.md  connect.md  examples.md  faq.md  firmware.md  hardware.md  ide.md  shields.md  start.md  troubleshooting.md
docs/fr/: connect.md  start.md
docs/it/: connect.md  examples.md  start.md
docs/zh/: connect.md  shields.md  start.md  troubleshooting.md
firmware/: firmware.md
layouts/: docs.hbs  start.hbs
plugins/toc/: package.json  toc.js
plugins/verbose/: verbose.js
scripts/: apidoc.js  apidoc.json  auto-include.js  before_install.sh  build.js  buildZip.js  cloud-app-templates.js  copy-files.js  crawler.js  deploy.sh  device-os-api.js  device-restore-info.js  device_feature_flags.js  docker-server.sh  fixLinks.js  fork.js  gen-docker-alias.sh  generateDnsTable.js  insert_fragment.js  javascript_docs_preprocess.js  jsapidoc.js  libraries.js  metalsmith.js  nav_menu_generator.js  particle-docs  pininfo-generator.js  planLimits.js  postman.js  precompile.js  priority-search.js  redirects.js  refcards.js  scroll-group.js  server.js  setup-firmware.js  shared-blurb.js  site-move.js  sitemap.js  system-version.js  tracker-edge.js  (+4 more)
scripts/CarrierList/: README.md  app.js  backup.json  carrierComparison.md  package-lock.json  package.json
scripts/FixLinks/: app.js  package-lock.json  package.json
scripts/LibraryTool/: .gitignore  README.md  app.js  package-lock.json  package.json
scripts/MigrateAppNotes/: app.js  package.json
scripts/ZendeskMigration/: README.md  app.js  config.json  package-lock.json  package.json
scripts/add-tracker-edge-version/: app.js  package-lock.json  package.json
scripts/api-rename-section/: app.js  package-lock.json  package.json
scripts/carriers-update/: app.js  carriers-update.js  generator-config.js  package-lock.json  package.json  schema-docs.js
scripts/cloud-api-generator/: app.js  package-lock.json  package.json
scripts/export-md/: .gitignore  app.js  package-lock.json  package.json
scripts/fake-data/: app.js  package-lock.json  package.json
scripts/fix-anchors/: app.js  package.json
scripts/fix-tracker-hex/: app.js  package-lock.json  package.json
scripts/generate-menu/: app.js  package.json
scripts/gtag-fix/: app.js  package-lock.json  package.json
scripts/map-fix/: app.js  package.json
scripts/menu-json-upgrade/: app.js  package-lock.json  package.json
scripts/migrate-guide/: app.js  package-lock.json  package.json
scripts/move-page/: app.js  package-lock.json  package.json
scripts/pdf-generation/: README.md  hashes.json  pdf-generation-gulpfile.js
scripts/pin-info-update/: app.js  package.json
scripts/pinmap-diagram/: app.js  package-lock.json  (+3 more)
src/: index.md  robots.txt  test.md
src/assets/files/projects/rp2040-raspberry-pi-asset-ota/pico/: CMakeLists.txt  README.md  app.c  flashloader.c  flashloader.h  memmap_application.ld  memmap_default.ld  memmap_defines.ld  memmap_flashloader.ld  uf2tool.py
templates/: api.hbs  datasheet.hbs  docs.hbs  guide.hbs  redirector.html.hbs  redirector.jade  reference.hbs  start.hbs  suppMenu.hbs  support.hbs  temp.hbs  tutorials.hbs
test/: crawler.js  test.js
(+4298 files in other folders)
